tests/ui/conditional-compilation/cfg-arg-invalid-4.rs
//@ compile-flags: --cfg a(b)

fn main() {}

//~? ERROR invalid `--cfg` argument: `a(b)` (expected `key` or `key="value"`)
